Fixed web.config release version settings

--- a/Web.Release.config
+++ b/Web.Release.config
@@ -25,6 +25,23 @@
     <add key="MailTo"
           value="detailwc@yahoo.com,jgilmore@detailwindow.com,sheeand@detailwindow.com"
           xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="MailToWebmaster"
+         value="sheeand@hotmail.com"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SmtpServer"
+          value="relay-hosting.secureserver.net"
+          xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+
   </appSettings>
+
+  <system.net>
+    <mailSettings xdt:Transform="RemoveAttributes(debug)" />
+    <mailSettings>
+      <smtp from="webmaster@detailwindow.com">
+        <network host="relay-hosting.secureserver.net"/>
+      </smtp>
+    </mailSettings>
+
+  </system.net>
 
 </configuration>
