Fixed web.config / Added opt out

--- a/Web.Release.config
+++ b/Web.Release.config
@@ -34,14 +34,12 @@
 
   </appSettings>
 
-  <system.net>
-    <mailSettings xdt:Transform="RemoveAttributes(debug)" />
+<system.net>
     <mailSettings>
-      <smtp from="webmaster@detailwindow.com">
-        <network host="relay-hosting.secureserver.net"/>
+      <smtp from="webmaster@detailwindow.com" xdt:Transform="Replace">
+        <network xdt:Transform="Replace" host="relay-hosting.secureserver.net" />
       </smtp>
     </mailSettings>
-
   </system.net>
 
 </configuration>
