--- a/Web.Release.config
+++ b/Web.Release.config
@@ -6,8 +6,7 @@
 
   <connectionStrings>
     <add name="detailConnectionString"
-         connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\detail.mdb" 
-         providerName="System.Data.OleDb"
+         connectionString="Data Source=wxstore.db.8112002.hostedresource.com; Initial Catalog=wxstore; User ID=wxstore; Password=Tbit1wog!;"
          xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     <add name="WX_STOREConnectionString"
          connectionString="Data Source=wxstore.db.8112002.hostedresource.com; Initial Catalog=wxstore; User ID=wxstore; Password=Tbit1wog!;"
