Fixes to accomodate SQL Server

--- a/Web.Release.config
+++ b/Web.Release.config
@@ -3,26 +3,20 @@
 <!-- For more information on using Web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-
   <connectionStrings>
     <add name="detailConnectionString"
          connectionString="Data Source=wxstore.db.8112002.hostedresource.com; Initial Catalog=wxstore; User ID=wxstore; Password=Tbit1wog!;"
          xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    <add name="WX_STOREConnectionString"
-         connectionString="Data Source=wxstore.db.8112002.hostedresource.com; Initial Catalog=wxstore; User ID=wxstore; Password=Tbit1wog!;"
-         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
-
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
   </system.web>
-
   <appSettings>
     <add key="MailFrom"
           value="webmaster@detailwindow.com"
           xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="MailTo"
-          value="detailwc@yahoo.com,jgilmore@detailwindow.com,sheeand@detailwindow.com"
+          value="detailwc@yahoo.com,sheeand@detailwindow.com"
           xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="MailToWebmaster"
          value="sheeand@hotmail.com"
@@ -30,9 +24,7 @@
     <add key="SmtpServer"
           value="relay-hosting.secureserver.net"
           xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-
   </appSettings>
-
 <system.net>
     <mailSettings>
       <smtp from="webmaster@detailwindow.com" xdt:Transform="Replace">
@@ -40,5 +32,4 @@
       </smtp>
     </mailSettings>
   </system.net>
-
 </configuration>
